src/objects/SFDC_Volunteer_Participant__c.object
<CustomObject>
    <description>A junction object used for linking Volunteer Events to a participant</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Participants</relationshipLabel>
        <relationshipName>R00N30000001WZmHEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Hours__c</fullName>
        <label>Participant Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001WZmGEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Date__c</fullName>
        <label>Volunteer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Event__c</fullName>
        <label>Volunteer Event</label>
        <referenceTo>SFDC_Volunteer_Event__c</referenceTo>
        <relationshipLabel>Volunteer Participants</relationshipLabel>
        <relationshipName>R00N30000001WZmFEAW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Volunteer Participant</label>
    <nameField>
        <displayFormat>Volunteer_ID {0000}</displayFormat>
        <label>Volunteer Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>